--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ h1
   justify-content: space-evenly;
 
   height: 7vh;
-  width: 100%;
+  width: 100vw;
   box-shadow: 0px 5px 5px rgb(47, 47, 47);
   background-color: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(10px);
