--- a/src/App.css
+++ b/src/App.css
@@ -64,6 +64,7 @@ h1
   min-width: 200px;
   max-width: 700px;
   width: 19vw;
+  overflow-x: hidden;
 
   /* background-color: var(--violet); */
   opacity: .5;
@@ -90,6 +91,8 @@ h1
     var(--violet) 0vh,
     var(--dark-grey) 35vh
   );  
+  overflow-x: hidden;
+
   height: 120vh;
   display: flex;
   flex-direction: column;
@@ -99,6 +102,8 @@ h1
 
 .Header-img
 {
+  overflow-x: hidden;
+
   height : 100vh;
   position: absolute;
   pointer-events: none;
