--- a/src/App.css
+++ b/src/App.css
@@ -58,16 +58,12 @@ h1
 
 .Point-light
 {
-  min-height: 200px;
-  max-height: 700px;
-  height: 19vw;
-  min-width: 200px;
-  max-width: 700px;
-  width: 19vw;
+  height: 600px;
+  width: 1000px;
   overflow-x: hidden;
 
   /* background-color: var(--violet); */
-  opacity: .5;
+  opacity: .2;
   border-radius: 9990px;
   filter: blur(100vw);
   position: absolute;
@@ -254,11 +250,11 @@ h1
   justify-content: center;
   align-items: center;
   margin-bottom: 30vh;
+  
 }
 
 .Work h2
 {
-  z-index: 2;
 
   width: 100%;
   margin-left: 10vw;
@@ -268,122 +264,125 @@ h1
   text-align: left;
 }
 
+
+
 .Project-card
 {
-  position: relative;
-  padding: 20px;
-
   z-index: 2;
-  margin: 15px;
-
-  width: 70vw;
-  max-width: 700px;
-  height: 30vh;
-  border: solid 2px white;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  
-  transition: all .2s;
-}
-
-
-.Project-card .Info
-{
-  position: absolute;
-  padding: 20px;
-  background-color: black;
-  left: 0;
-  bottom:0;
-  width: 0%;
-  opacity: 0;
-  height: 87%;
+  overflow: hidden;
+  position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-
-  transition: all .2s;
+  gap: 0;
+  margin: 20px;
+  max-width: 1000px;
+  transition: all .5s;
 }
-.Active
-{
-  width: 50%;
-  opacity: .9;
-}
-.Project-card .Info h1
-{
-  text-decoration: underline;
-}
-
-
 
 .Project-card section
 {
-  height: 100%;
+  height: 80px;
+  z-index: 1;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   justify-content: space-between;
-}
-
-.Project-card h1
-{
+  align-items: center;
   text-align: left;
-  width: 100%;
-  font-size: 28px;
-  letter-spacing: 5px;
+  background-color: var(--dark-grey);
 
-  margin: 0;
-
-}
-
-.Project-card p
-{
-  font-size: 12px;
-  color: white;
-  text-wrap: wrap;
-  text-align: left;
-  width: 70%;
+  border-end-end-radius: 40px;
+  border-end-start-radius: 40px;
 }
 
 .Project-card article
 {
-  width: 100%;
-  height: 10%;
+  margin-left: 5%;
   display: flex;
-  flex-direction: row;
-  justify-self: center;
-  align-items: center;
-  gap: 5px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 
-.Project-card article img
+.Project-card h1
 {
-  width: 10%;
+  margin: 0;
+  font-size: large;
+  letter-spacing: 1px;
+  font-weight: 500;
 }
-
 .Project-card h3
 {
-  width: 100%;
-  color: white;
-
-  text-align: start;
-  font-weight: 100;
-  font-size: 12px;
   margin: 0;
+
+  color: #A4A4A4;
+  font-size: small;
+  font-weight: 400;
+}
+
+.Project-card section img
+{
+  height: 70%;
+  margin-right: 5%;
+  border-start-end-radius: 0;
+  border-start-start-radius: 0;
 }
 
 .Project-card img
-{
-  height: 100%;
-  width: 100%;
-
-  object-fit: contain;
+{  
+  border-start-end-radius: 40px;
+  border-start-start-radius: 40px;
 }
 
+.Project-card::after
+{
+  content: "";
+  bottom: 40px;
+  right: 140%;
+  
+  height: 100%;
+  width: 80px;
+  rotate: 25deg;
+  position: absolute;
+  background-color: white;
+  opacity: .3;
 
+  transition: all .6s;
+}
+.Project-card::before
+{
+  content: "";
+  bottom: 40px;
+  right: 120%;
+  
+  height: 150%;
+  width: 100px;
+  rotate: 25deg;
+  position: absolute;
+  background-color: white;
+  opacity: .5;
 
+  transition: all .5s;
+}
+
+.Project-card:hover::before
+{
+  content: "";
+  bottom: 40px;
+  right: -100%;
+}
+.Project-card:hover::after
+{
+  content: "";
+  bottom: 40px;
+  right: -60%;
+}
+
+.Project-card:hover
+{
+  filter: drop-shadow(30px 10px 4px black);
+  transform: translateX(-20px);
+  scale: 1.05;
+}
 
 /* ********************************************************* */
 /* ********************************************************* */
@@ -458,11 +457,4 @@ h1
     font-size: 12vw;
   }
 
-  .Project-card
-  {
-    height: auto;
-  flex-direction: column;
-  gap: 20px;
-
-  }
 }
