--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,11 @@ h1
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  background-image: url("Images/header-img.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
 
 
@@ -101,7 +106,6 @@ h1
   user-select: none;
   height: 90vh;
   object-fit:contain;
-
 }
 
 .Hero h1
