--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,11 @@
 body {
   background-color: var(--dark-grey);
-  width: 100vw;
   overflow-x: hidden;
   margin: 0;
+  height: 621vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 html 
 { 
