--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,6 @@ a
   overflow-x: hidden;
   text-align: center;
   font-family: 'Titillium Web', sans-serif;
-
 }
 
 h1
@@ -210,7 +209,7 @@ h1
   padding-block: 5px;
   border: solid 2px white;
   border-radius: 20px;
-  height: 3vh;
+  height: 22px;
   display: flex;
   flex-direction: row;
   justify-content: center;
