--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,9 @@ h1
 
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: left;
+  gap: 5%;
+  padding-left: 5%;
 
   height: 7vh;
   width: 100vw;
@@ -59,8 +61,8 @@ h1
 {
   height: 600px;
   width: 1000px;
-  overflow-x: hidden;
   opacity: .2;
+  /* z-index: -1; */
   border-radius: 9990px;
   filter: blur(100vw);
   position: absolute;
@@ -546,9 +548,46 @@ h1
 } 
 
 
+/* ********************************************************* */
+/* ********************************************************* */
+
+/**
+*  _   _  ___ _____   _____ ___  _   _ _   _ ____  
+* | \ | |/ _ \_   _| |  ___/ _ \| | | | \ | |  _ \ 
+* |  \| | | | || |   | |_ | | | | | | |  \| | | | |
+* | |\  | |_| || |   |  _|| |_| | |_| | |\  | |_| |
+* |_| \_|\___/ |_|   |_|   \___/ \___/|_| \_|____/ 
+*/
 
 /* ********************************************************* */
 /* ********************************************************* */
+
+.Not-found
+{
+  position: relative;
+  text-align: center;
+  display: flex;
+  justify-self: center;
+  align-items: center;
+}
+.Not-found h1
+{
+  width: 100%;
+  font-size: 128px;
+}
+.Not-found .link
+{
+  color: rgb(255, 255, 255);
+}
+
+.Not-found .link:hover
+{
+  color: rgb(204, 204, 204);
+}
+
+/* ********************************************************* */
+/* ********************************************************* */
+
 /**
 *  _____ ____  _   _  ____           _____ _____ _     
 * |_   _|  _ \| | | |/ ___|         |_   _| ____| |    
@@ -556,6 +595,7 @@ h1
 *   | | |  _ <| |_| | |___            | | | |___| |___ 
 *   |_| |_| \_\\___/ \____|           |_| |_____|_____|
 */
+
 /* ********************************************************* */
 /* ********************************************************* */
 
