--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
   color: white;
   overflow-x: hidden;
   margin: 0;
+  height: 1000vh;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
