--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,7 @@ h1
 
   background-image: url("Images/header-img.png");
   background-position: center;
-  background-size:  cover;
+  background-size:  contain;
   background-repeat: no-repeat;
 }
 
@@ -610,6 +610,11 @@ h1
 
 @media (max-width: 740px)
 {
+  .Hero
+  {
+    background-size: cover;
+
+  }
   .Hero h1
   {
     margin: 0;
