--- a/src/App.css
+++ b/src/App.css
@@ -572,16 +572,17 @@ h1
 
 .Not-found
 {
-  position: relative;
   text-align: center;
   display: flex;
   justify-self: center;
   align-items: center;
+  height: 100vh;
 }
 .Not-found h1
 {
   width: 100%;
-  font-size: 128px;
+
+  font-size: 12vw;
 }
 .Not-found .link
 {
